# mpp

./: .gitignore  main.cpp  mpp.pro  readme.md  readme.txt  unt_Dictionary.cpp  unt_Dictionary.h  unt_MatUts.cpp  unt_MatUts.h  unt_PoorMansUnicode.cpp  unt_PoorMansUnicode.h
.msvc/: mpp.vcxproj
msvc/: mpp.sln  mpp.vcxproj
source/: def-parser.hpp  dictionary.hpp  h-parser.hpp  logging.hpp  main.cpp  parse.hpp  poor-mans-unicode.hpp  preprocess.hpp  process.hpp  string-utilities.hpp  system.hpp
stuff/: CMakeLists.txt  makefile  mpp.pro  project.geany
